--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@strapi/plugin-graphql": "^4.3.8",
     "@strapi/plugin-i18n": "4.3.8",
     "@strapi/plugin-users-permissions": "4.3.8",
+    "@strapi/provider-upload-aws-s3": "^4.3.8",
     "@strapi/strapi": "4.3.8",
-    "pg": "8.6.0",
+    "pg": "^8.8.0",
     "strapi-plugin-transformer": "^2.1.0"
   },
   "author": {
