--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/provider-upload-aws-s3": "^4.3.8",
     "@strapi/strapi": "4.3.8",
     "pg": "^8.8.0",
+    "pg-connection-string": "^2.5.0",
     "strapi-plugin-transformer": "^2.1.0"
   },
   "author": {
