--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-users-permissions": "4.3.8",
     "@strapi/provider-email-nodemailer": "^4.3.8",
     "@strapi/provider-upload-aws-s3": "^4.3.8",
+    "@strapi/provider-upload-cloudinary": "^4.3.9",
     "@strapi/strapi": "4.3.8",
     "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
