--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/provider-upload-aws-s3": "^4.3.8",
     "@strapi/provider-upload-cloudinary": "^4.3.9",
     "@strapi/strapi": "4.3.8",
+    "mysql": "^2.18.1",
     "pg": "^8.8.0",
     "pg-connection-string": "^2.5.0",
     "strapi-plugin-transformer": "^2.1.0"
