fix: fix env example

--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,8 @@ DATABASE_PORT=
 DATABASE_DATABASE=
 
 # DATABASE LOCAL
-DATABASE_HOST=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_PORT=
-DATABASE_DATABASE=
+DATABASE_LOCAL_HOST=
+DATABASE_LOCAL_USER=
+DATABASE_LOCAL_PASSWORD=
+DATABASE_LOCAL_PORT=
+DATABASE_LOCAL_DATABASE=
